--- a/Client/.gitignore
+++ b/Client/.gitignore
@@ -11,7 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
-
+*data-requests
+fetchWaifu.js
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
