--- a/Client/package.json
+++ b/Client/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@gsap/react": "^2.1.1",
     "antd": "^5.17.4",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "gsap": "npm:@gsap/business@^3.12.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
